0.67 to be released
    * More aggressively watch for startup of the web server to reduce idle
      times. Also speed up the test suite by polling instead of sleep()ing.
    * Added ->server_url() as a half-documented way of changing the URL
      the server is accessed at. This is self-service and if things break, you
      get to keep all the parts.

0.66 2019-09-10
    * Make detection of IPv4 localhost vs. IPv6 localhost
      much more resilient. Backported from WWW::Mechanize, implemented by
      Shoichi Kaji.
    * We now need HTTP::Daemon 6.05.

0.65 2019-09-05
    * Fix order of module usage in test scripts, spotted by Jorol
      This only was a problem when you had $ENV{HTTP_PROXY} set.
    * Document that we clean out $ENV{HTTPS_PROXY} as well.

0.64 2018-10-28
    * Re-release including correct META.* information
    * No upgrade necessary

0.63 2018-06-04
    * Fix the form parameters getting lost
      This was since we changed the form from GET to POST ...

0.62 2018-05-20
    * Fix the ->redirect URL to honor the specified host
      This prevents breakage due to localhost vs. 127.0.0.1 mixups
    * Add ->content method to serve arbitrary content like Javascript

0.61 2017-11-29
    * Make the "->download" method actually work in the sense that it will send
	  downloads with a name other than "$1".

0.60 2017-11-27
    * Add method to "download" a file
	  This is in preparation for WWW::Mechanize::Chrome trying to download
	  a file
	* Rework IPC to launch the server
	  The old method of a pipe-open was elegant but didn't really work out for
	  cleanly shutting down the process. The new approach uses the same way
	  we spawn and dissociate Chrome in WWW::Mechanize::Chrome.
	* We are now more defensive about finding out whether CGI.pm can do
	  ->multi_param or not

0.59 2017-06-17
    * Add support for checking Javascript properties if Javascript runs on the
      client