@@ -46,8 +46,8 @@
             "HTTP::Daemon" : "6.05",
             "HTTP::Request::AsCGI" : "0",
             "HTTP::Response" : "0",
+            "HTTP::Tiny" : "0",
             "IO::Socket::INET" : "0",
-            "LWP::Simple" : "0",
             "Socket" : "0",
             "Time::HiRes" : "0",
             "URI" : "0",
@@ -57,10 +57,6 @@
       },
       "test" : {
          "requires" : {
-            "HTTP::Request::Common" : "0",
-            "LWP" : "6.36",
-            "LWP::Simple" : "0",
-            "LWP::UserAgent" : "0",
             "Test::More" : "0"
          }
       }
