@@ -8,10 +8,6 @@ build_requires:
   File::Copy: '0'
   File::Find: '0'
   File::Path: '0'
-  HTTP::Request::Common: '0'
-  LWP: '6.36'
-  LWP::Simple: '0'
-  LWP::UserAgent: '0'
   Test::More: '0'
 configure_requires:
   ExtUtils::MakeMaker: '0'
@@ -37,8 +33,8 @@ requires:
   HTTP::Daemon: '6.05'
   HTTP::Request::AsCGI: '0'
   HTTP::Response: '0'
+  HTTP::Tiny: '0'
   IO::Socket::INET: '0'
-  LWP::Simple: '0'
   Socket: '0'
   Time::HiRes: '0'
   URI: '0'
