@@ -59,21 +59,17 @@ my %module = (
                         'File::Basename' => 0,
                         'HTTP::Response' => 0,
                         'HTTP::Daemon' => 6.05,
+                        'HTTP::Tiny'     => 0,
                         'IO::Socket::INET' => 0, # For port probing
                         'CGI' => 0,
                         'HTTP::Request::AsCGI' => 0,
                         'Socket' => 0, # for detecting 127.0.0.1 vs [::1]
                         'URI'      => 0,
                         'URI::URL' => 0,
-                        'LWP::Simple' => 0,
                         'Time::HiRes' => 0,
     },
     TEST_REQUIRES => {
         'Test::More'      => 0,
-        'LWP::Simple'     => 0,
-        'LWP::UserAgent'  => 0,
-        'LWP'             => '6.36', # somewhere before that, there is a test failure otherwise
-        'HTTP::Request::Common' => 0,
     },
 
     dist                => { COMPRESS => 'gzip -9f', SUFFIX => 'gz', },
