@@ -3,7 +3,6 @@
 use strict;
 
 require HTTP::Daemon;
-require LWP::UserAgent;
 
 $|++;
 
